# xThreads

./: .gitignore  .gitmodules  README.md  key
EVM/: README.md  deploy.sh
EVM/broadcast/Deploy.s.sol/31337/: run-1754185121.json  run-1754185188.json
EVM/cache/: solidity-files-cache.json
EVM/script/: Deploy.s.sol
EVM/src/: AddressConverter.sol  BaseEscrowFactory.sol  EscrowFactory.sol  IEscrowFactory.sol  IOTypes.sol
Polkadot/escrow/: Cargo.toml  lib.rs
Polkadot/escrow/src/: address_converter.rs  escrow_base_factory.rs  lib.rs  libbkp.rs  types.rs
escrow-sdk/: package-lock.json  package.json  tsconfig.json
escrow-sdk/src/: EscrowFactory.ts  index.ts  types.ts  utils.ts
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: [root-of-the-server]__80bb4c51._.js.map  node_modules_next_11760126._.js.map
frontend/.next/static/chunks/: [root-of-the-server]__8ebb6d4b._.css  [root-of-the-server]__8ebb6d4b._.css.map  (+56 more)
frontend/src/api/: chainApi.ts  orderApi.ts  quoteApi.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  SwapWidget.tsx
frontend/src/data/: chains.json
frontend/src/lib/: walletManager.ts
parachain-template/: Cargo.toml  README.md
parachain-template/pallets/escrow-pallet/: Cargo.toml
(+89 files in other folders)
