[package]
name = "escrow-factory"
version = "0.1.0"
authors = ["Shahnawaz Akhtar sakhtar0092@gmail.com"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.1", default-features = false, features = ["unstable-hostfn"] }
ink_storage = { version = "4.0.0-alpha.1", default-features = false }





[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.1" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std", "ink_storage/std"

]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]

